--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cookie">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu&display=swap">
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% block head %}{% endblock %}
