--- a/game/templates/game/matches.html
+++ b/game/templates/game/matches.html
@@ -11,7 +11,7 @@
         {% for match in matches %}
             {% include "game/match.html" %}
         {% empty %}
-            Jeszcze nie masz żadnych optyjaciół. Optyjaciele pojawią się po zakończonej rundzie, w której weźmiesz udział.
+            <p>Jeszcze nie masz żadnych optyjaciół. Optyjaciele pojawią się po zakończonej rundzie, w której weźmiesz udział.</p>
         {% endfor %}
     </div>
 {% endblock %}
