hotfix for blog post

--- a/game/templates/game/match.html
+++ b/game/templates/game/match.html
@@ -12,6 +12,7 @@
             {% endif %}
         </div>
     {% else %}
+        <p><b>Runda: </b>{{ match.quiz.year }}_{{ match.quiz.week }}</p>
         <p>Brak optyjaciela ze względu na nieparzystą liczbę graczy.</p>
     {% endif %}
 </div>
