--- a/game/templates/message/message_outbox.html
+++ b/game/templates/message/message_outbox.html
@@ -11,8 +11,7 @@
     <div class="box">
         <a style="display: block;" href="{% url "message-write" %}">
             <div style="display: flex; align-items: center; gap: 4px;">
-                <i class="material-icons" style="font-size: 2em; color: green;">add_circle</i>
-                <h2 style="font-size: inherit; margin: 0">Nowa wiadomość</h2>
+                <span class="button green-button">Nowa wiadomość</span>
             </div>
         </a>
 
