--- a/game/templates/game/game_quiz.html
+++ b/game/templates/game/game_quiz.html
@@ -31,7 +31,7 @@
         {%  endfor %}
         <input type="hidden" name="quiz_id" value="{{ quiz.id }}">
         <div class="vertical-center">
-            <button type="submit" class="big-orange-button">Wyślij</button>
+            <button type="submit" class="button blue-button">Wyślij odpowiedzi</button>
         </div>
         </form>
     </div>
