--- a/game/templates/game/match.html
+++ b/game/templates/game/match.html
@@ -12,7 +12,9 @@
             {% endif %}
         </div>
     {% else %}
-        <p><b>Runda: </b>{{ match.quiz.year }}_{{ match.quiz.week }}</p>
-        <p>Brak optyjaciela ze względu na nieparzystą liczbę graczy.</p>
+        <div class="card-item1">
+            <p><b>Runda: </b>{{ match.quiz.year }}_{{ match.quiz.week }}</p>
+            <p>Brak optyjaciela ze względu na nieparzystą liczbę graczy.</p>
+        </div>
     {% endif %}
 </div>
