change button in msg write

--- a/game/templates/message/message_write.html
+++ b/game/templates/message/message_write.html
@@ -21,7 +21,7 @@
                 {% csrf_token %}
                 {{ form.as_p }}
                 <div class="vertical-center">
-                    <button type="submit" class="big-orange-button">Wyślij</button>
+                    <button type="submit" class="button blue-button">Wyślij wiadomość</button>
                 </div>
             </form>
         {% else %}
