--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -69,6 +69,11 @@
         </div>
         <div class="push"></div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        <div class="footer-container">
+            <span>© 2022 optyjaciel</span>
+            <span><a href="{% url 'blog' %}" class="link">blog</a></span>
+        </div>
+    </div>
 </body>
 </html>
