--- a/game/templates/game/rules.html
+++ b/game/templates/game/rules.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {%  block content %}
-    <div class="box high-line">
+    <div class="box long-text">
         <span class="subtitle">Na czym polega gra?</span>
         <p>W każdej rundzie wszyscy gracze odpowiadają na 10 takich samych pytań.
             Następnie gracze są dobierani w pary tak, aby uzyskać jak najwięcej punktów <strong>dla całej grupy graczy</strong>.
@@ -24,7 +24,7 @@
         </p>
     </div>
 
-    <div class="box high-line">
+    <div class="box long-text">
         <span class="subtitle">Jak dobierani są optyjaciele?</span>
         <img src="{% static 'img/diagram.webp' %}" alt="Przykładowe wyniki z rundy" width="320px" height="337px" style="float: right;">
         <p>Optyjaciele są łączeni w pary tak, aby uzyskać jak najwięcej punktów wśród wszystkich grających.
@@ -43,7 +43,7 @@
             A wynik całej grupy wyniósłby tylko 12 punktów.</p>
     </div>
 
-    <div class="box high-line">
+    <div class="box long-text">
         <span class="subtitle">Jakie jest prawdopodobieństwo uzyskania 10 punktów?</span>
         <p>Prawdopodobieństwo odpowiedzi tak samo na jedno pytanie to 1 do 2.</p>
 
