--- a/game/templates/game/matches.html
+++ b/game/templates/game/matches.html
@@ -6,12 +6,13 @@
 
 {%  block content %}
     <div class="box">
-        Twoi optyjaciele z poprzednich rund:
-
+        <p>Twoi optyjaciele z poprzednich rund:</p>
+        <div class="cards">
         {% for match in matches %}
             {% include "game/match.html" %}
         {% empty %}
             <p>Jeszcze nie masz żadnych optyjaciół. Optyjaciele pojawią się po zakończonej rundzie, w której weźmiesz udział.</p>
         {% endfor %}
+            </div>
     </div>
 {% endblock %}
