--- a/game/static/css/base.css
+++ b/game/static/css/base.css
@@ -123,7 +123,6 @@ footer {
     margin-left: 24px;
 }
 
-
 .box {
     background-color: #fff;
     padding: 16px;
@@ -132,23 +131,47 @@ footer {
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
-
 .box img {
     max-width: 100%;
     height: auto;
 }
 
 /* match */
-.card {
-    border: 1px dotted #003c61;
-    margin: 24px;
-    padding: 12px;
+.cards {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
+    row-gap: 24px;
+    margin-bottom: 24px;
+}
+
+.cards > div {
+    flex-basis: 49%;
+}
+
+
+.card {
+    border: 1px solid #eee;
+    box-shadow: rgba(149, 157, 165, 0.2) 6px 6px 8px;
+}
+
+.card-header {
+    background-color: #eee;
+    font-size: 0.8em;
+    font-weight: bold;
+    text-align: center;
+    padding: 4px;
+}
+
+.card-items {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 12px 12px 12px;
 }
 
 .card-item1 {
     flex-grow: 2;
+    text-align: center;
 }
 
 .card-item2 {
@@ -285,6 +308,12 @@ blockquote {
     display: block;
 }
 
+.meta {
+  font-size: 0.8em;
+  color: #999;
+  margin-bottom: 0.4em;
+}
+
 /* small screens */
 @media only screen and (max-width: 768px) {
     .container {
@@ -312,4 +341,11 @@ blockquote {
         width: 100%;
     }
 
+    .cards {
+        flex-direction: column;
+    }
+
+    .card-items {
+        flex-direction: column;
+    }
 }
