--- a/game/templates/game/game_match.html
+++ b/game/templates/game/game_match.html
@@ -6,7 +6,9 @@
 
 {%  block content %}
     <div class="box">
-        <span>Do końca rundy zostało: <strong>{{ remaining_time_in_week }}</strong>. Obecnie Twoim optyjacielem jest:</span>
-        {% include "game/match.html" %}
+        <p>Do końca rundy zostało: <strong>{{ remaining_time_in_week }}</strong>. Obecnie Twoim optyjacielem jest:</p>
+        <div class="cards">
+            {% include "game/match.html" %}
+        </div>
     </div>
 {% endblock %}
