--- a/game/templates/game/match.html
+++ b/game/templates/game/match.html
@@ -23,8 +23,12 @@
         </div>
     {% else %}
         <div class="card-item1">
-            <p>Brak optyjaciela ze względu na nieparzystą liczbę graczy.</p>
+            <p>
+                Brak optyjaciela<br>
+                ze względu na nieparzystą liczbę graczy.
+            </p>
         </div>
+
         <div class="card-item2">
             <span class="button disabled-button">kompatybilność</span>
             <span class="button disabled-button">wiadomość</span>
