update settings for gmail

--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -71,8 +71,8 @@
     </div>
     <footer>
         <div class="footer-container">
-            <span>© 2022 optyjaciel</span>
-            <span><a href="{% url 'blog' %}" class="link">blog</a></span>
+            <span>© 2023 optyjaciel</span>
+<!--            <span><a href="{% url 'blog' %}" class="link">blog</a></span>-->
         </div>
     </footer>
 </body>
