--- a/game/templates/game/blog_post.html
+++ b/game/templates/game/blog_post.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block head %}
+    <link rel="canonical" href="https://www.optyjaciel.pl/blog/{{ post.slug }}">
+{% endblock %}
+
 {%  block content %}
 
     <div class="box long-text">
