--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -72,7 +72,8 @@
     <footer>
         <div class="footer-container">
             <span>© 2023 optyjaciel</span>
-<!--            <span><a href="{% url 'blog' %}" class="link">blog</a></span>-->
+            <span><a href="{% url 'blog' %}" class="link">blog</a></span>
+            <span><a href="{% url 'about' %}" class="link">o grze</a></span>
         </div>
     </footer>
 </body>
