--- a/game/templates/message/message_inbox.html
+++ b/game/templates/message/message_inbox.html
@@ -9,7 +9,7 @@
 
 {%  block content %}
     <div class="box">
-        <a style="display: block;" href="{% url "message-write" %}">
+        <a style="display: block;" href="{% url 'message-write' %}">
             <div style="display: flex; align-items: center; gap: 4px;">
                 <span class="button green-button">Nowa wiadomość</span>
             </div>
@@ -17,13 +17,13 @@
 
         <div class="in-out">
             <a class="in in_or_out"><h2 style="font-size: inherit; margin: 0">odebrane</h2></a>
-            <a class="out" href="{% url "message-outbox" %}"><h2 style="font-size: inherit; margin: 0">wysłane</h2></a>
+            <a class="out" href="{% url 'message-outbox' %}"><h2 style="font-size: inherit; margin: 0">wysłane</h2></a>
         </div>
 
         <div class="table">
             {% for message in messages_in %}
-                <a class="table-row {% if message.new %} new-msg {% endif %}" href="{% url "message-read" message.id %}">
-                    <div class="table-cell">{{ message.from_user.get_username }}</div>
+                <a class="table-row {% if message.new %} new-msg {% endif %}" href="{% url 'message-read' message.id %}">
+                    <div class="table-cell">{{ message.from_user.profile.nickname }}</div>
                     <div class="table-cell">{{ message.title }}</div>
                     <div class="table-cell">{{ message.sent_at }}</div>
                 </a>
