--- a/game/templates/message/message_outbox.html
+++ b/game/templates/message/message_outbox.html
@@ -9,21 +9,21 @@
 
 {%  block content %}
     <div class="box">
-        <a style="display: block;" href="{% url "message-write" %}">
+        <a style="display: block;" href="{% url 'message-write' %}">
             <div style="display: flex; align-items: center; gap: 4px;">
                 <span class="button green-button">Nowa wiadomość</span>
             </div>
         </a>
 
         <div class="in-out">
-            <a class="in" href="{% url "message-inbox" %}">odebrane</a>
+            <a class="in" href="{% url 'message-inbox' %}">odebrane</a>
             <a class="out in_or_out">wysłane</a>
         </div>
 
         <div class="table">
             {% for message in messages_out %}
-                <a class="table-row" href="{% url "message-read" message.id %}">
-                    <div class="table-cell">{{ message.to_user.get_username }}</div>
+                <a class="table-row" href="{% url 'message-read' message.id %}">
+                    <div class="table-cell">{{ message.to_user.profile.nickname }}</div>
                     <div class="table-cell">{{ message.title }}</div>
                     <div class="table-cell">{{ message.sent_at }}</div>
                 </a>
