--- a/account/templates/registration/password_reset_email.html
+++ b/account/templates/registration/password_reset_email.html
@@ -1,3 +1,3 @@
-Otrzymano żądanie zmiany hasła dla użytkownika {{ user.get_username }}.
+Otrzymano żądanie zmiany hasła dla użytkownika {{ user.username }}.
 Wejdź w następujący link w celu zresetowania hasła:
 {{ protocol }}://{{ domain }}{% url "account:password_reset_confirm" uidb64=uid token=token %}
