--- a/game/templates/game/match.html
+++ b/game/templates/game/match.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card-header">{{ match.quiz.id}}</div>
+    <div class="card-header">{{ match.quiz.date }}</div>
     <div class="card-items">
     {% if match.exists %}
         <div class="card-item1">
