fix heritage issues

--- a/game/templates/game/compatibility.html
+++ b/game/templates/game/compatibility.html
@@ -6,7 +6,7 @@
 
 {%  block content %}
     <div class="box">
-        <span class="subtitle">Kompatybilność w rundzie {{ quiz.year }}_{{ quiz.week }}</span>
+        <span class="subtitle">Kompatybilność w rundzie {{ quiz.date }}</span>
         <br><br>
 
         <div class="big-screen" style="overflow-x:auto;">
