--- a/game/templates/game/match.html
+++ b/game/templates/game/match.html
@@ -15,7 +15,7 @@
 
         <div class="card-item2">
             <a href="{% url 'compatibility' match.quiz.id match.user.id match.matched_user.id %}" class="button blue-button">kompatybilność</a>
-            {% if previous_game and match.matched_user.is_active %}
+            {% if match.matched_user.is_active %}
                 <a href="{% url 'message-write' match.matched_user.id %}" class="button blue-button">wiadomość</a>
             {% else %}
                 <span class="button disabled-button">wiadomość</span>
