--- a/game/templates/message/message_read.html
+++ b/game/templates/message/message_read.html
@@ -11,12 +11,11 @@
     <div class="box">
         <div class="msg-container">
             {% if msg_type == "in" %}
-                <div class="from-to-user">Od: {{ message.from_user.profile.nickname }}</div>
+                <div class="from-to-user">Od: {{ message.from_user }}</div>
             {% else %}
-                <div class="from-to-user">Do: {{ message.to_user.profile.nickname }}</div>
+                <div class="from-to-user">Do: {{ message.to_user }}</div>
             {% endif %}
             <div class="sent-at">{{ message.sent_at }}</div>
-            <div class="title">{{ message.title }}</div>
             <div class="body">{{ message.body }}</div>
         </div>
     </div>
