--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -45,7 +45,7 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="{% url "game" %}">gra/a></li>
+                    <li><a href="{% url "game" %}">gra</a></li>
                     <li><a href="{% url "matches" %}">optyjaciele</a></li>
                     <li>
                         {% if no_messages > 0 %}
