--- a/game/templates/message/message_outbox.html
+++ b/game/templates/message/message_outbox.html
@@ -22,7 +22,7 @@
 
         <div class="table">
             {% for message in messages_out %}
-                <a class="table-row" href="{% url 'message-read' message.id %}">
+                <a class="table-row" href="{% url 'message-read' message.uuid %}">
                     <div class="table-cell">{{ message.to_user }}</div>
                     <div class="table-cell">{{ message.sent_at }}</div>
                 </a>
