--- a/game/templates/game/diary_post.html
+++ b/game/templates/game/diary_post.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block head %}
-    <link rel="canonical" href="https://www.optyjaciel.pl/blog/{{ post.slug }}">
+    <link rel="canonical" href="https://www.optyjaciel.com/pamietnik/{{ post.slug }}">
 {% endblock %}
 
 {%  block content %}
