handle meta description

--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Optyjaciel to internetowa gra towarzyska, w której możesz poznać nowych
-    znajomych i przyjaciół. W grze zostaniesz dobrany w parę na podstawie Twoich zainteresowań i preferencji.">
+    {% block meta_description %}
+        <meta name="description" content="Optyjaciel to internetowa gra towarzyska, w której możesz poznać nowych
+        znajomych i przyjaciół. W grze zostaniesz dobrany w parę na podstawie Twoich zainteresowań i preferencji.">
+    {% endblock %}
     <meta name="keywords" content="przyjaciel, przyjaciółka, przyjaciele, przyjaźń,
     kolega, koleżanka, koledzy, koleżanki, znajomy, znajoma, znajomi, poznawanie nowych osób, poznawanie nowych ludzi,
     gra, gra towarzyska, zabawa, portal społecznościowy">
