update created in post

--- a/game/templates/game/diary_post.html
+++ b/game/templates/game/diary_post.html
@@ -14,7 +14,7 @@
 
     <div class="box long-text">
         <h1>{{ post.title }}</h1>
-        <div>{{ post.created }}</div>
+        <div>{{ post.created|date:"Y-m-d" }}</div>
         <div>{{ post.body|safe }}</div>
     </div>
 
