--- a/game/templates/game/rules.html
+++ b/game/templates/game/rules.html
@@ -3,45 +3,51 @@
 {% load static %}
 
 {%  block content %}
+
+
     <div class="box long-text">
-        <span class="subtitle">o co tu w ogóle chodzi?</span>
+        <h1 style="text-align: center;">Optyjaciel - poznaj osoby podobne do siebie</h1>
+
+        <br>
+        <h2>Na czym polega gra?</h2>
         <p>
-            każdego dnia wszyscy gracze dostają te same 10 pytań. nie ma ściągania, nie ma faworyzowania – równo dla wszystkich.
-            po odpowiedziach system dobiera graczy w pary tak, żeby <strong>cała ekipa zdobyła jak najwięcej punktów</strong>.
-            taką superdopasowaną parę nazywamy <strong>optyjaciółmi</strong> – czyli optymalnymi przyjaciółmi. brzmi mądrze, ale działa.
+            W każdej rundzie wszyscy gracze odpowiadają na 10 takich samych pytań.
+            Następnie gracze są dobierani w pary tak, aby uzyskać jak najwięcej punktów dla całej grupy graczy.
+            Dobrana para to <strong>optyjaciele</strong>.
         </p>
 
         <p>
-            punkt wpada wtedy, gdy ty i twój optyjaciel odpowiecie tak samo na pytanie.
-            skoro jest 10 pytań – można zgarnąć max 10 punktów jako para. prosta matma.
+            Punkt przyznawany jest wtedy, gdy dwie osoby odpowiedzą tak samo na pytanie.
+            Każda runda zawiera 10 pytań, więc jedna para może uzyskać maksymalnie 10 punktów.
         </p>
 
+        <br>
+        <h2>Jak dobierani są optyjaciele?</h2>
+        <img src="{% static 'img/diagram.webp' %}" alt="Przykładowe wyniki z rundy"
+             width="320px" height="337px" style="float: right;">
         <p>
-            uwaga: twój optyjaciel to niekoniecznie osoba, z którą masz najwięcej wspólnych odpowiedzi.
-            system kombinuje tak, żeby <strong>cała grupa</strong> wypadła najlepiej. liczy się team spirit, nie ego.
+            Optyjaciele są łączeni w pary tak, aby uzyskać jak najwięcej punktów wśród wszystkich grających.
+            Punkt przyznawany jest za każdą identyczną odpowiedź w parze.
         </p>
 
-        <span class="subtitle">jak dobierane są pary?</span>
-        <img src="{% static 'img/diagram.webp' %}"
-             alt="przykładowe wyniki z rundy"
-             width="320px" height="337px"
-             style="float: right;">
-        <p>
-            algorytm (brzmi poważnie, ale spokojnie) miesza i dopasowuje ludzi w taki sposób, żeby suma punktów wszystkich par była jak najwyższa.
-            punkt leci zawsze, gdy dwie osoby odpowiedzą tak samo. easy.
-        </p>
+        <p>Zobaczmy to na przykładzie.</p>
 
-        <p>dobra, przykład zawsze lepszy niż teoria.</p>
+        <p>Załóżmy, że w grze biorą udział Alicja, Bartek, Czarek i Daria.
+            Ich wyniki można zobaczyć na diagramie obok.</p>
 
-        <p>załóżmy, że grają: alicja, bartek, czarek i daria. ich odpowiedzi są pokazane na obrazku obok (spojrzyj, nie gryzie).</p>
+        <p>Optyjacielami zostaliby Alicja i Bartek (wynik 7 punktów) oraz Czarek i Daria (wynik 6 punktów).
+            W ten sposób wynik całej grupy to 13 punktów.</p>
 
-        <p>najlepszy układ to: alicja + bartek (7 pkt) oraz czarek + daria (6 pkt). suma? 13 punktów. sztos.</p>
+        <p>Mimo że najwyższy wynik mają Alicja i Czarek (8 punktów) nie są oni optyjacielami,
+            ponieważ wtedy Bartek zostałby połączony z Darią (4 punkty).
+            A wynik całej grupy wyniósłby tylko 12 punktów.</p>
 
-        <p>
-            ale uwaga plot twist – alicja i czarek mają razem 8 punktów. więcej, prawda?
-            no ale jakby ich sparować, to bartek z darią zdobywają tylko 4. cała grupa ma wtedy 12, czyli gorzej.
-            a my tu gramy w drużynie.
-        </p>
+        <br>
+        <h2>Jakie jest prawdopodobieństwo uzyskania 10 punktów?</h2>
+        <p>Prawdopodobieństwo odpowiedzi tak samo na jedno pytanie to 1 do 2.</p>
+        <p>W przypadku dwóch pytań, prawdopobieństwo odpowiedzi na obydwa tak samo wynosi 1 do 4.</p>
+        <p>Natomiast prawdopodobieństwo, że dwie osoby odpowiedziały tak samo na wszystkie 10 pytań wynosi 1 do 1024
+            (mniej niż jeden na tysiąc!).</p>
     </div>
 
 {% endblock %}
