--- a/game/templates/game/rules.html
+++ b/game/templates/game/rules.html
@@ -6,7 +6,7 @@
 
 
     <div class="box long-text">
-        <h1 style="text-align: center;">Optyjaciel - poznaj osoby podobne do siebie</h1>
+        <h1 style="text-align: center;">Poznaj osoby podobne do siebie</h1>
 
         <br>
         <h2>Na czym polega gra?</h2>
