--- a/game/templates/game/rules.html
+++ b/game/templates/game/rules.html
@@ -44,10 +44,10 @@
 
         <br>
         <h2>Jakie jest prawdopodobieństwo uzyskania 10 punktów?</h2>
-        <p>Prawdopodobieństwo odpowiedzi tak samo na jedno pytanie to 1 do 2.</p>
-        <p>W przypadku dwóch pytań, prawdopobieństwo odpowiedzi na obydwa tak samo wynosi 1 do 4.</p>
-        <p>Natomiast prawdopodobieństwo, że dwie osoby odpowiedziały tak samo na wszystkie 10 pytań wynosi 1 do 1024
-            (mniej niż jeden na tysiąc!).</p>
+        <p>Są cztery możliwe odpowiedzi, więc prawdopodobieństwo odpowiedzi tak samo na jedno pytanie to 1 do 4.</p>
+        <p>W przypadku dwóch pytań, prawdopobieństwo odpowiedzi na obydwa tak samo wynosi 1 do 16.</p>
+        <p>Natomiast prawdopodobieństwo, że dwie osoby odpowiedziały tak samo na wszystkie 10 pytań wynosi 1 do 1048576
+            (mniejsze niż <strong>jeden na milion</strong>!).</p>
     </div>
 
 {% endblock %}
