--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -11,6 +11,8 @@
     <meta name="keywords" content="przyjaciel, przyjaciółka, przyjaciele, przyjaźń,
     kolega, koleżanka, koledzy, koleżanki, znajomy, znajoma, znajomi, poznawanie nowych osób, poznawanie nowych ludzi,
     gra, gra towarzyska, zabawa, portal społecznościowy">
+    <meta name="google-adsense-account" content="ca-pub-5965098763982165">
+
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cookie">
