simplify get_matches_queryset function

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -12,7 +12,9 @@
         <h2 style="font-size: 1.17em;">Runda: {{ quiz.date }}</h2>
 
         {% if played %}
-            <p>Już zagrałe/aś w tej rundzie. Proszę poczekaj do końca dnia. Twój optyjaciel pojawi się zaraz po północy.</p>
+            <p>Już zagrałe/aś w tej rundzie.</p>
+
+            <p>Proszę poczekaj do końca dnia. Twój optyjaciel pojawi się zaraz po północy.</p>
 
             {# reklama #}
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5965098763982165"
